Almost done assignment-4

--- a/assignment-2-task-1/css/site.css
+++ b/assignment-2-task-1/css/site.css
@@ -123,3 +123,20 @@ input, select, textarea {
 input[type='checkbox'] {
     display: inline;
 }
+
+span {
+    display: none;
+}
+
+form div {
+    display: none;
+}
+
+.invalid-email, .invalid-phone {
+    color: red;
+    display: inline;
+}
+
+.visible {
+    display: block;
+}
